--- a/src/main/resources/View/AdminDashBoard.fxml
+++ b/src/main/resources/View/AdminDashBoard.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="Emptypane" prefHeight="774.0" prefWidth="1210.0" style="-fx-background-color: #0095ff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="Emptypane" prefHeight="774.0" prefWidth="1210.0" style="-fx-background-color: #0095ff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.adminDasboard">
    <children>
       <ImageView fx:id="adminpic" fitHeight="71.0" fitWidth="83.0" layoutX="1100.0">
          <image>
@@ -18,5 +19,15 @@
             <Font name="Calibri Bold" size="19.0" />
          </font>
       </Text>
+      <Label fx:id="lblDate" layoutX="741.0" layoutY="16.0" prefHeight="40.0" prefWidth="268.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblTime" layoutX="23.0" layoutY="20.0" prefHeight="32.0" prefWidth="183.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
