--- a/src/main/resources/View/DashBoardForm.fxml
+++ b/src/main/resources/View/DashBoardForm.fxml
@@ -62,6 +62,11 @@
                   <Image url="@../image/download.jpeg" />
                </image>
             </ImageView>
+            <Button fx:id="paymentMangmentBTN1" layoutX="23.0" layoutY="603.0" mnemonicParsing="false" onAction="#RegestationOnAction" prefHeight="75.0" prefWidth="187.0" style="-fx-background-radius: 10px;" text="Registation">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="Emptypane" layoutX="232.0" layoutY="-1.0" prefHeight="818.0" prefWidth="1195.0" style="-fx-background-color: white;" />
